force-app/main/default/objects/Asset/fields/Alpha__c.field-meta.xml
<CustomField>
    <fullName>Alpha__c</fullName>
    <label>Alpha</label>
    <length>32</length>
    <type>Text</type>
</CustomField>