force-app/main/default/objects/Asset/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>Mobile</label>
    <length>30</length>
    <type>Text</type>
</CustomField>