force-app/main/default/objects/Asset/fields/Monitor__c.field-meta.xml
<CustomField>
    <fullName>Monitor__c</fullName>
    <label>Monitor</label>
    <length>33</length>
    <type>Text</type>
</CustomField>