force-app/main/default/objects/Asset/fields/Quality__c.field-meta.xml
<CustomField>
    <fullName>Quality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quality</label>
    <type>Checkbox</type>
</CustomField>