force-app/main/default/objects/Asset/fields/Xioami__c.field-meta.xml
<CustomField>
    <fullName>Xioami__c</fullName>
    <label>Xioami</label>
    <length>16</length>
    <type>Text</type>
</CustomField>